--- a/source/catalog.html
+++ b/source/catalog.html
@@ -42,7 +42,7 @@
       <section class="advice">
         <h2>Фото и видео о Седоне</h2>
         <div class="advice__image advice__image--photo">
-          <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
+          <img src="img/Sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
           <div class="advise__triangle"></div>
         </div>
         <h2 class="advice__slogan">Фото и видео</h2>
