--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
       <section class="advice">
         <h2 class="visually-hidden">Sedona</h2>
         <div class="advice__image advice__image--index">
-          <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="280" height="213">
+          <img src="img/Sedona.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
           <div class="advise__triangle"></div>
         </div>
       </section>
