Сетка для каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,12 +26,11 @@
             <a class="site-list__link" href="#">Html academy</a>
           </li>
         </ul>
-        <button class="main-nav__toggle main-nav__toggle--closed main-nav__toggle--nojs" type="button">
+        <button class="main-nav__toggle main-nav__toggle--closed type=" button">
           <span class="visually-hidden">Кнопка меню в мобильной версии
           </span>
         </button>
       </nav>
-      <p class="page-header__paragraph"></p>
       <a class="page-header__logo page-header__logo--mobile">
         <img class="page-header__logo-image" src="img/logotype.svg" alt="City of Sedona">
       </a>
@@ -43,7 +42,7 @@
         <h2>Фото и видео о Седоне</h2>
         <div class="advice__image advice__image--photo">
           <img src="img/Sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
-          <div class="advise__triangle"></div>
+          <div class="advice__triangle"></div>
         </div>
         <h2 class="advice__slogan">Фото и видео</h2>
         <p class="advice__intro advice__intro--photo">Не можете решиться на путешествие из-за курса? Фотографии
@@ -65,18 +64,10 @@
                     <span class="catalog__author">Борис</span>
                   </div>
                   <span class="catalog__likes catalog__likes--first">
-                    <svg display="none">
-                      <symbol id="like" viewBox="0 0 23 21" width="23" height="21">
-                        <g>
-                          <path opacity="0.3"
-                            d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
-                            fill="black">
-                        </g>
-                      </symbol>
-                    </svg> 1350
-                    <svg class="catalog__likes-svg" xmlns="http://www.w3.org/2000/svg"></svg>
-                    <use xlink:href="#like"></use>
-                    </svg>
+                    <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">
+                  </span>
+                  <span class="catalog__likes-number">
+                    1350
                   </span>
                 </li>
               </ul>
@@ -93,7 +84,10 @@
                   <span class="catalog__author-description">Автор фото:</span>
                   <span class="catalog__author">Сергей</span>
                   <span class="catalog__likes">
-                    <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">143
+                    <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">
+                  </span>
+                  <span class="catalog__likes-number">
+                    143
                   </span>
                 </div>
               </li>
@@ -110,7 +104,10 @@
                   <span class="catalog__author-description">Автор фото:</span>
                   <span class="catalog__author">Петр</span>
                   <span class="catalog__likes">
-                    <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">96
+                    <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">
+                  </span>
+                  <span class="catalog__likes-number">
+                    96
                   </span>
                 </div>
               </li>
@@ -118,7 +115,7 @@
           </div>
           <div class="catalog">
             <h3 class="visually-hidden">Мост дьявола</h3>
-            <img class="catalog__image" src="img/photo-4-desktop 1.jpg" alt="Мост дьявола">
+            <img class="catalog__image" src="img/photo-4-mobile.jpg" alt="Мост дьявола">
             </a>
             <ul class="catalog__outline">
               <li>
@@ -127,7 +124,10 @@
                   <span class="catalog__author-description">Автор фото:</span>
                   <span class="catalog__author">Антон</span>
                   <span class="catalog__likes">
-                    <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">254
+                    <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">
+                  </span>
+                  <span class="catalog__likes-number">
+                    254
                   </span>
                 </div>
               </li>
@@ -143,7 +143,8 @@
           <img class="video__player" src="img/video-mobile.jpg" alt="Видео">
           <div class="video__control">
             <div class="video__line">
-              <input class="slider" type="range" min="0" max="4000" step="1" value="3000">
+              <p class="video__line-line"></p>
+              <input class="video__slider" type="range" min="0" max="4000" step="1" value="3000">
             </div>
             <div class="video__replay">
               <button class="video__button video__button--replay">
