--- a/source/catalog.html
+++ b/source/catalog.html
@@ -32,7 +32,7 @@
         </button>
       </nav>
       <a class="page-header__logo page-header__logo--mobile">
-        <img class="page-header__logo-image" src="img/logotype.svg" alt="City of Sedona">
+        <img class="page-header__logo-image" src="img/logotype-mobile.svg" alt="City of Sedona">
       </a>
     </header>
 
