--- a/source/index.html
+++ b/source/index.html
@@ -20,45 +20,45 @@
             <a class="site-list__link" href="catalog.html">Фото и видео</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Форма отзыва</a>
+            <a class="site-list__link" href="form.html">Форма отзыва</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Html academy</a>
+            <a class="site-list__link" href="https://htmlacademy.ru">Html academy</a>
           </li>
         </ul>
         <button class="main-nav__toggle main-nav__toggle--closed" type="button"></button>
         <a class="page-header__logo page-header__logo--mobile">
-          <img class="page-header__logo-image" src="img/logotype.svg" alt="City of Sedona">
+          <img class="page-header__logo-image" src="img/logotype.svg" alt="Логотип сайта Седона">
         </a>
       </nav>
     </header>
 
     <main class="page-main">
       <h1 class="visually-hidden">Седонa</h1>
-      <section class="advice">
-        <h2 class="visually-hidden">Sedona</h2>
-        <div class="advice__image advice__image--index">
-          <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
-          <div class="advise__triangle"></div>
+      <div class="advice">
+        <div class="advice-wrapper">
+          <div class="advice__image advice__image--index">
+            <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
+          </div>
         </div>
-      </section>
-
+      </div>
       <section class="features">
         <div class="features__welcome">
-          <h2 class="features__slogan features__slogan--small">Седона — небольшой городок в Аризоне, заслуживающий
+          <h3 class="features__slogan">Седона — небольшой городок в Аризоне, заслуживающий
             большего!
-          </h2>
+          </h3>
           <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </div>
-        <h2 class="visually-hidden">Преимущества</h2>
         <div class="feature-photo feature-photo--first">
-          <div class="feature-photo__outline">
-            <h3 class="feature-photo__title">Настоящий городок</h3>
-            <span class="feature-photo__number">— №1 —</span>
-            <p class="feature-photo__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <div class="feature-photo-wrapper">
+            <div class="feature-photo__outline">
+              <h3 class="feature-photo__title">Настоящий городок</h3>
+              <span class="feature-photo__number">— №1 —</span>
+              <p class="feature-photo__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
           </div>
           <div class="feature-photo__image">
-            <img class="feature-photo__img" src="img/photo-city@1x1.jpg" alt="Седона - настоящий город, не аттракцион">
+            <img class="feature-photo__img" src="img/photo-city@1x1.jpg" alt="Фото города Седона">
           </div>
         </div>
         <ul class="features__list">
@@ -126,9 +126,7 @@
     </main>
 
     <footer class="page-footer">
-      <p class="page-footer__hash-wrapper">
-        <span class="page-footer__hash">#Visitsedona</span>
-      </p>
+      <p class="page-footer__hash">#Visitsedona</p>
       <ul class="page-footer__social social">
         <li class="social__item">
           <a class="social__link" href="#">
