--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,7 @@
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a class="site-list__link">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="catalog.html">Фото и видео</a>
@@ -26,7 +26,6 @@
             <a class="site-list__link" href="#">Html academy</a>
           </li>
         </ul>
-        <p class="page-header__paragraph"></p>
         <button class="main-nav__toggle main-nav__toggle--closed" type="button"></button>
         <a class="page-header__logo page-header__logo--mobile">
           <img class="page-header__logo-image" src="img/logotype.svg" alt="City of Sedona">
@@ -36,17 +35,17 @@
 
     <main class="page-main">
       <h1 class="visually-hidden">Отзывы</h1>
-      <section class="advice advice--form">
-        <h2 class="visually-hidden">Вступительный раздел с баннером о форме отзыва</h2>
-        <div class="advice__image advice__image--form">
-          <img src="img/sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
-          <div class="advice__triangle"></div>
+      <div class="advice">
+        <div class="advice-wrapper--form">
+          <div class="advice__image advice__image--form">
+            <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
+          </div>
+          <b class="advice__slogan">Оставьте свой отзыв</b>
+          <p class="advice__intro advice__intro--form">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также
+            о посещенных вами достопримечательностях
+          </p>
         </div>
-        <b class="advice__slogan">Оставьте свой отзыв</b>
-        <p class="advicer__intro advice__intro--form">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
-          посещенных вами достопримечательностях</p>
-      </section>
-
+      </div>
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="get">
         <fieldset class="feedback-form__item feedback-form__item--name">
           <b class="feedback-form__bold feedback-form__bold--name">Представьтесь:</b>
@@ -79,11 +78,8 @@
           <div class="feedback-form__wrapper feedback-form__wrapper--contacts">
             <div class="form-contact">
               <label class="form-contact__label" for="tel">
-                <span class="form-contact__hiding-phone">
-                  <span class="visually-hidden">Пожалуйста, введите ваш</span>
-                  Контактный
-                </span>
-                Телефон
+                <span class="visually-hidden">Пожалуйста, введите ваш</span>
+                Контактный телефон
                 <sup>*</sup>:
               </label>
               <p class="form-contact__input-container">
@@ -110,22 +106,16 @@
           <b class="feedback-form__bold feedback-form__bold--genfeedback">Ваше общее впечатление:</b>
           <div class="feedback-form__wrapper">
             <p class="form-radio">
-              <label class="form-radio__label">
-                <input class="form-radio__input" type="radio" name="general-feedback" value="positive" checked>
-                Скорее положительное
-              </label>
+              <input class="form-radio__input" type="radio" name="general-feedback" value="positive" checked>
+              <label class="form-radio__label">Скорее положительное</label>
             </p>
             <p class="form-radio">
               <input class="form-radio__input " type="radio" name="general-feedback" value="negative">
-              <label class="form-radio__label">
-                Скорее отрицательное
-              </label>
+              <label class="form-radio__label">Скорее отрицательное</label>
             </p>
             <p class="form-radio">
-              <label class="form-radio__label">
-                <input class="form-radio__input " type="radio" name="general-feedback" value="problem">
-                Затрудняюсь ответить
-              </label>
+              <input class="form-radio__input " type="radio" name="general-feedback" value="problem">
+              <label class="form-radio__label">Затрудняюсь ответить</label>
             </p>
           </div>
         </fieldset>
@@ -133,28 +123,24 @@
           <b class="feedback-form__bold feedback-form__bold--visited-places">Посещенные достопримечательности:</b>
           <div class="feedback-form__wrapper feedback-form__wrapper--visited">
             <p class="form-chbx form-chbx--bridge">
-              <label class="form-chbx__label" for="bridge">
-                <input class="form-chbx__input" type="checkbox" name="bridge" checked>
-                Мост Дьявола
-              </label>
+              <input class="form-chbx__input" type="checkbox" name="bridge" checked>
+              <label class="form-chbx__label" for="bridge">Мост Дьявола</label>
+              <span class="form-chbx__label-tick"></span>
             </p>
             <p class="form-chbx form-chbx--bell">
-              <label class="form-chbx__label" for="bell">
-                <input class="form-chbx__input" type="checkbox" name="bell" checked>
-                Гора-Колокол
-              </label>
+              <input class="form-chbx__input" type="checkbox" name="bell" checked>
+              <label class="form-chbx__label" for="bell">Гора-Колокол</label>
+              <span class="form-chbx__label-tick"></span>
             </p>
             <p class="form-chbx form-chbx--park">
-              <label class="form-chbx__label" for="park">
-                <input class="form-chbx__input" type="checkbox" name="park" checked>
-                Слайд-парк
-              </label>
+              <input class="form-chbx__input" type="checkbox" name="park" checked>
+              <label class="form-chbx__label" for="park">Слайд-парк</label>
+              <span class="form-chbx__label-tick"></span>
             </p>
             <p class="form-chbx form-chbx--rocks">
-              <label class="form-chbx__label" for="redrocks">
-                <input class="form-chbx__input" type="checkbox" name="redrocks">
-                Красные скалы
-              </label>
+              <input class="form-chbx__input" type="checkbox" name="redrocks">
+              <label class="form-chbx__label" for="redrocks">Красные скалы</label>
+              <span class="form-chbx__label-tick"></span>
             </p>
           </div>
         </fieldset>
