декор для главной страницы

--- a/source/form.html
+++ b/source/form.html
@@ -36,7 +36,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Отзывы</h1>
       <div class="advice">
-        <div class="advice-wrapper--form">
+        <div class="advice__wrapper--form">
           <div class="advice__image advice__image--form">
             <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
           </div>
