--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Седонa</h1>
       <div class="advice">
-        <div class="advice-wrapper">
+        <div class="advice__wrapper">
           <div class="advice__image advice__image--index">
             <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
           </div>
@@ -44,9 +44,9 @@
       </div>
       <section class="features">
         <div class="features__welcome">
-          <h3 class="features__slogan">Седона — небольшой городок в Аризоне, заслуживающий
+          <h2 class="features__slogan">Седона — небольшой городок в Аризоне, заслуживающий
             большего!
-          </h3>
+          </h2>
           <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </div>
         <div class="feature-photo feature-photo--first">
