--- a/source/form.html
+++ b/source/form.html
@@ -95,7 +95,7 @@
                 <sup>*</sup>:
               </label>
               <p class="form-contact__input-container">
-                <input class="form-contact__input" type="email" name="email" placeholder="Введите e-mail">
+                <input class="form-contact__input" type="email" name="почта" placeholder="Введите e-mail">
                 <input class="form-contact__logo form-contact__logo--env" type="image" src="img/icon-mail.svg"
                   alt="Иконка e-mail">
               </p>
@@ -123,24 +123,20 @@
           <b class="feedback-form__bold feedback-form__bold--visited-places">Посещенные достопримечательности:</b>
           <div class="feedback-form__wrapper feedback-form__wrapper--visited">
             <p class="form-chbx form-chbx--bridge">
-              <input class="form-chbx__input" type="checkbox" name="bridge" checked>
+              <input class="form-chbx__input" type="checkbox" name="bridge" value="positive" checked>
               <label class="form-chbx__label" for="bridge">Мост Дьявола</label>
-              <span class="form-chbx__label-tick"></span>
             </p>
             <p class="form-chbx form-chbx--bell">
               <input class="form-chbx__input" type="checkbox" name="bell" checked>
               <label class="form-chbx__label" for="bell">Гора-Колокол</label>
-              <span class="form-chbx__label-tick"></span>
             </p>
             <p class="form-chbx form-chbx--park">
               <input class="form-chbx__input" type="checkbox" name="park" checked>
               <label class="form-chbx__label" for="park">Слайд-парк</label>
-              <span class="form-chbx__label-tick"></span>
             </p>
             <p class="form-chbx form-chbx--rocks">
               <input class="form-chbx__input" type="checkbox" name="redrocks">
               <label class="form-chbx__label" for="redrocks">Красные скалы</label>
-              <span class="form-chbx__label-tick"></span>
             </p>
           </div>
         </fieldset>
