--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,32 +43,33 @@
           <div class="advice__image advice__image--form">
             <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
           </div>
-          <b class="advice__slogan">Фото и видео</b>
-          <p class="advice__intro advice__intro--catalog">Не можете решиться на путешествие из-за курса? Фотографии
-            помогут вам забыть о политике и экономике.
-          </p>
+          <h2 class="advice__slogan">Фото и видео</р>
+            <p class="advice__intro advice__intro--catalog">Не можете решиться на путешествие из-за курса? Фотографии
+              помогут вам забыть о политике и экономике.
+            </p>
         </div>
       </div>
       <section class="catalogs">
         <h2 class="visually-hidden">Раздел с фото и видео о Седоне</h2>
         <ul class="catalogs__wrapper">
-          <div class="catalogs catalog--first">
-            <li class="catalog">
-              <h3 class="visually-hidden">Неродные просторы</h3>
-              <img class="catalog__image" src="img/sunset-mobile.jpg" alt="Неродные просторы">
-              <div class="catalog__outline">
-                <div class="catalog__author-wrapper">
-                  <b class="catalog__title">Неродные просторы</b>
-                  <p class="catalog__author-description">Автор фото: Борис</p>
-                  <button class="catalog__likes-svg">
-                    <span class="catalog__likes-number">
-                      1350
-                    </span>
-                  </button>
-                </div>
+          <li class="catalog">
+            <h3 class="visually-hidden">Неродные просторы</h3>
+            <img class="catalog__image" src="img/sunset-mobile.jpg" alt="Неродные просторы">
+            <div class="catalog__outline">
+              <div class="catalog__author-wrapper">
+                <b class="catalog__title">Неродные просторы</b>
+                <p class="catalog__author-description">Автор фото: Борис</p>
+                <button class="catalog__likes-svg">
+                  <span class="catalog__like">
+                    Лайк
+                  </span>
+                  <span class="catalog__likes-number">
+                    1350
+                  </span>
+                </button>
               </div>
-            </li>
-          </div>
+            </div>
+          </li>
           <li class="catalog">
             <h3 class="visually-hidden">Местная растительность</h3>
             <img class="catalog__image" src="img/cactus-mobile.jpg" alt="Местная растительность">
@@ -77,6 +78,9 @@
                 <b class="catalog__title">Местная растительность</b>
                 <p class="catalog__author-description">Автор фото: Сергей</p>
                 <button class="catalog__likes-svg">
+                  <span class="catalog__like">
+                    Лайк
+                  </span>
                   <span class="catalog__likes-number">
                     143
                   </span>
@@ -92,6 +96,9 @@
                 <b class="catalog__title">Дорога на север</b>
                 <p class="catalog__author-description">Автор фото: Петр</p>
                 <button class="catalog__likes-svg">
+                  <span class="catalog__like">
+                    Лайк
+                  </span>
                   <span class="catalog__likes-number">
                     96
                   </span>
@@ -107,6 +114,9 @@
                 <b class="catalog__title">Мост дьявола</b>
                 <p class="catalog__author-description">Автор фото: Антон</p>
                 <button class="catalog__likes-svg">
+                  <span class="catalog__like">
+                    Лайк
+                  </span>
                   <span class="catalog__likes-number">
                     254
                   </span>
@@ -144,41 +154,39 @@
             </button>
           </div>
         </div>
-  </div>
-  </section>
-  </main>
-  <footer class="page-footer">
-    <p class="page-footer__hash-wrapper">
-      <span class="page-footer__hash">#Visitsedona</span>
-    </p>
-    <ul class="page-footer__social social">
-      <li class="social__item">
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Твиттер</span>
-          <img class="social__link-svg" src="img/icon-twitter.svg" alt="">
+      </section>
+    </main>
+    <footer class="page-footer">
+      <p class="page-footer__hash">#Visitsedona</p>
+      </p>
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Твиттер</span>
+            <img class="social__link-svg" src="img/icon-twitter.svg" alt="">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Фейсбук</span>
+            <img class="social__link-svg" src="img/icon-facebook.svg" alt="">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Ютуб</span>
+            <img class="social__link-svg" src="img/icon-youtube.svg" alt="">
+          </a>
+        </li>
+      </ul>
+      <p class="page-footer__copyright copyright">
+        <span class="copyright__info">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="visually-hidden">Ссылка на интенсив</span>
+          <img src="img/htmlacademy.svg" alt="">
         </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Фейсбук</span>
-          <img class="social__link-svg" src="img/icon-facebook.svg" alt="">
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Ютуб</span>
-          <img class="social__link-svg" src="img/icon-youtube.svg" alt="">
-        </a>
-      </li>
-    </ul>
-    <p class="page-footer__copyright copyright">
-      <span class="copyright__info">Разработано</span>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="visually-hidden">Ссылка на интенсив</span>
-        <img src="img/htmlacademy.svg" alt="">
-      </a>
-    </p>
-  </footer>
+      </p>
+    </footer>
   </div>
 </body>
 
