--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,14 +39,14 @@
     <main class="page-main">
       <h1 class="visually-hidden">Отзывы</h1>
       <div class="advice">
-        <div class="advice__wrapper--form">
-          <div class="advice__image advice__image--form">
+        <div class="advice__wrapper--catalog">
+          <div class="advice__image advice__image--catalog">
             <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
           </div>
-          <h2 class="advice__slogan">Фото и видео</р>
-            <p class="advice__intro advice__intro--catalog">Не можете решиться на путешествие из-за курса? Фотографии
-              помогут вам забыть о политике и экономике.
-            </p>
+          <h2 class="advice__slogan">Фото и видео</h2>
+          <p class="advice__intro advice__intro--catalog">Не можете решиться на путешествие из-за курса? Фотографии
+            помогут вам забыть о политике и экономике.
+          </p>
         </div>
       </div>
       <section class="catalogs">
@@ -60,7 +60,7 @@
                 <b class="catalog__title">Неродные просторы</b>
                 <p class="catalog__author-description">Автор фото: Борис</p>
                 <button class="catalog__likes-svg">
-                  <span class="catalog__like">
+                  <span class="visually-hidden">
                     Лайк
                   </span>
                   <span class="catalog__likes-number">
@@ -78,7 +78,7 @@
                 <b class="catalog__title">Местная растительность</b>
                 <p class="catalog__author-description">Автор фото: Сергей</p>
                 <button class="catalog__likes-svg">
-                  <span class="catalog__like">
+                  <span class="visually-hidden">
                     Лайк
                   </span>
                   <span class="catalog__likes-number">
@@ -96,7 +96,7 @@
                 <b class="catalog__title">Дорога на север</b>
                 <p class="catalog__author-description">Автор фото: Петр</p>
                 <button class="catalog__likes-svg">
-                  <span class="catalog__like">
+                  <span class="visually-hidden">
                     Лайк
                   </span>
                   <span class="catalog__likes-number">
@@ -114,7 +114,7 @@
                 <b class="catalog__title">Мост дьявола</b>
                 <p class="catalog__author-description">Автор фото: Антон</p>
                 <button class="catalog__likes-svg">
-                  <span class="catalog__like">
+                  <span class="visually-hidden">
                     Лайк
                   </span>
                   <span class="catalog__likes-number">
@@ -158,7 +158,6 @@
     </main>
     <footer class="page-footer">
       <p class="page-footer__hash">#Visitsedona</p>
-      </p>
       <ul class="page-footer__social social">
         <li class="social__item">
           <a class="social__link" href="#">
