--- a/source/form.html
+++ b/source/form.html
@@ -52,16 +52,14 @@
           <div class="form-name">
             <label class="form-name__label" for="name">
               <span class="visually-hidden">Пожалуйста, введите ваше</span>
-              Имя
-              <sup>*</sup>:
+              Имя*:
             </label>
             <input class="form-name__input" type="text" name="name" placeholder="Петр">
           </div>
           <div class="form-name">
             <label class="form-name__label" for="family">
               <span class="visually-hidden">Пожалуйста, введите вашу</span>
-              Фамилия
-              <sup>*</sup>:
+              Фамилия*:
             </label>
             <input class="form-name__input" type="text" name="family" placeholder="Иванов">
           </div>
@@ -79,8 +77,7 @@
             <div class="form-contact">
               <label class="form-contact__label" for="tel">
                 <span class="visually-hidden">Пожалуйста, введите ваш</span>
-                Контактный телефон
-                <sup>*</sup>:
+                Контактный телефон*:
               </label>
               <p class="form-contact__input-container">
                 <input class="form-contact__input" type="tel" name="tel" placeholder="Введите телефон">
@@ -91,11 +88,10 @@
             <div class="form-contact">
               <label class="form-contact__label" for="email">
                 <span class="visually-hidden">Пожалуйста, введите вашу</span>
-                Электронная почта
-                <sup>*</sup>:
+                Электронная почта*:
               </label>
               <p class="form-contact__input-container">
-                <input class="form-contact__input" type="email" name="почта" placeholder="Введите e-mail">
+                <input class="form-contact__input" type="email" name="mail" placeholder="Введите e-mail">
                 <input class="form-contact__logo form-contact__logo--env" type="image" src="img/icon-mail.svg"
                   alt="Иконка e-mail">
               </p>
@@ -150,8 +146,7 @@
     </main>
 
     <footer class="page-footer">
-      <p class="page-footer__hash-wrapper">
-        <span class="page-footer__hash">#Visitsedona</span>
+      <p class="page-footer__hash">#Visitsedona
       </p>
       <ul class="page-footer__social social">
         <li class="social__item">
