--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Седонa</h1>
       <div class="advice">
-        <div class="advice__wrapper">
+        <div class="advice__wrapper--index">
           <div class="advice__image advice__image--index">
             <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
           </div>
@@ -50,7 +50,7 @@
           <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </div>
         <div class="feature-photo feature-photo--first">
-          <div class="feature-photo-wrapper">
+          <div class="feature-photo__wrapper">
             <div class="feature-photo__outline">
               <h3 class="feature-photo__title">Настоящий городок</h3>
               <span class="feature-photo__number">— №1 —</span>
