--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,9 +26,9 @@
             <a class="site-list__link" href="https://htmlacademy.ru">Html academy</a>
           </li>
         </ul>
-        <button class="main-nav__toggle main-nav__toggle--closed type=" button">
-          <span class="visually-hidden">Кнопка меню в мобильной версии
-          </span>
+        <button class="main-nav__toggle main-nav__toggle--closed" type="button"></button>
+        <span class="visually-hidden">Кнопка меню в мобильной версии
+        </span>
         </button>
       </nav>
       <a class="page-header__logo page-header__logo--mobile">
@@ -39,7 +39,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Отзывы</h1>
       <div class="advice">
-        <div class="advice__wrapper--catalog">
+        <div class="advice__wrapper advice__wrapper--catalog">
           <div class="advice__image advice__image--catalog">
             <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
           </div>
@@ -126,7 +126,7 @@
           </li>
         </ul>
       </section>
-      <section class="catalogs__video video">
+      <section class="catalogs-video video">
         <div class="video__outline">
           <b class="video__title">Все еще сомневаетесь?</b>
           <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
