--- a/source/index.html
+++ b/source/index.html
@@ -155,6 +155,27 @@
         </a>
       </p>
     </footer>
+    <div class="pop-up pop-up--success">
+      <section class="pop-up__window pop-up__window--success">
+        <h3 class="visually-hidden">Всплывающее окно с сообщением о том, что ваш отзыв принят</h3>
+        <b class="pop-up__alert">Ваш отзыв отправлен!</b>
+        <p class="pop-up__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br> В ближайшее время мы
+          опубликуем его на сайте.</p>
+        <div class="pop-up__button-wrapper">
+          <button class="pop-up__button button" type="button" name="button-popup-close">Закрыть окно</button>
+        </div>
+      </section>
+    </div>
+    <div class="pop-up pop-up--failure">
+      <section class="pop-up__window pop-up__window--failure">
+        <h3 class="visually-hidden">Всплывающее окно с сообщением об ошибке во время отправки формы</h3>
+        <b class="pop-up__alert pop-up__alert--failure">ЧТО-ТО ПОШЛО НЕ ТАК!</b>
+        <p class="pop-up__description pop-up__description--failure">Проверьте поля, выделенные красным, скорее всего вы
+          забыли их заполнить</p>
+        <button class="pop-up__button pop-up__button--failure button" type="button" name="button-popup-fail">Oк</button>
+      </section>
+    </div>
+  </div>
   </div>
 </body>
 
