--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <div style="display: none;">
+    <include src="source/img/sprite.svg"></include>
+  </div>
   <div class="container">
     <header class="page-header">
       <nav class="main-nav">
@@ -32,29 +35,40 @@
         </button>
       </nav>
       <a class="page-header__logo page-header__logo--mobile">
-        <img class="page-header__logo-image" src="img/logotype.svg" alt="City of Sedona">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg">
+          <img class="page-header__logo-image" src="img/logotype-mobile.svg" alt="Логотип сайта Седона">
+        </picture>
       </a>
     </header>
 
     <main class="page-main">
       <h1 class="visually-hidden">Отзывы</h1>
       <div class="advice">
-        <div class="advice__wrapper advice__wrapper--catalog">
-          <div class="advice__image advice__image--catalog">
-            <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
-          </div>
-          <h2 class="advice__slogan">Фото и видео</h2>
-          <p class="advice__intro advice__intro--catalog">Не можете решиться на путешествие из-за курса? Фотографии
-            помогут вам забыть о политике и экономике.
-          </p>
+        <div class="advice__image advice__image--catalog">
+          <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
+          <div class="advice__triangle"></div>
         </div>
+        <h2 class="advice__slogan">Фото и видео</h2>
+        <p class="advice__intro advice__intro--catalog">Не можете решиться на путешествие из-за курса? Фотографии
+          помогут вам забыть о политике и экономике.
+        </p>
       </div>
       <section class="catalogs">
         <h2 class="visually-hidden">Раздел с фото и видео о Седоне</h2>
         <ul class="catalogs__wrapper">
-          <li class="catalog">
+          <li class="catalog catalog--first">
             <h3 class="visually-hidden">Неродные просторы</h3>
-            <img class="catalog__image" src="img/sunset-mobile.jpg" alt="Неродные просторы">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)"
+                  srcset="img/photo-sunset-desktop@1x.jpg, img/photo-sunset-desktop@2x.jpg">
+                <source media="(min-width: 768px)"
+                  srcset="img/photo-sunset-tablet@1x.jpg, img/photo-sunset-tablet@2x.jpg">
+                <img class="catalog__image" src="img/sunset-mobile.jpg" alt="Неродные просторы">
+              </picture>
+            </a>
             <div class="catalog__outline">
               <div class="catalog__author-wrapper">
                 <b class="catalog__title">Неродные просторы</b>
@@ -162,19 +176,27 @@
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Твиттер</span>
-            <img class="social__link-svg" src="img/icon-twitter.svg" alt="">
+            <svg class="social__link-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="15" fill="#fff">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Фейсбук</span>
-            <img class="social__link-svg" src="img/icon-facebook.svg" alt="">
+            <svg class="social__link-svg social__link-svg--fb" xmlns="http://www.w3.org/2000/svg" width="9" height="19"
+              fill="#fff">
+              <use xlink:href="img/sprite.svg#icon-facebook"></use>
+            </svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Ютуб</span>
-            <img class="social__link-svg" src="img/icon-youtube.svg" alt="">
+            <svg class="social__link-svg social__link-svg--yt" xmlns="http://www.w3.org/2000/svg" width="20" height="14"
+              fill="#fff">
+              <use xlink:href="img/sprite.svg#icon-youtube"></use>
+            </svg>
           </a>
         </li>
       </ul>
@@ -182,7 +204,9 @@
         <span class="copyright__info">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">Ссылка на интенсив</span>
-          <img src="img/htmlacademy.svg" alt="">
+          <svg class="copyright__link-svg" xmlns="http://www.w3.org/2000/svg" width="40" height="50">
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
+          </svg>
         </a>
       </p>
     </footer>
