--- a/source/form.html
+++ b/source/form.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <div style="display: none;">
+    <include src="source/img/sprite.svg"></include>
+  </div>
   <div class="container">
     <header class="page-header">
       <nav class="main-nav">
@@ -31,7 +34,11 @@
         </ul>
         <button class="main-nav__toggle main-nav__toggle--closed main-nav__toggle--nojs" type="button"></button>
         <a class="page-header__logo page-header__logo--mobile">
-          <img class="page-header__logo-image" src="img/logotype.svg" alt="City of Sedona">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg">
+            <img class="page-header__logo-image" src="img/logotype-mobile.svg" alt="Логотип сайта Седона">
+          </picture>
         </a>
       </nav>
     </header>
@@ -39,15 +46,14 @@
     <main class="page-main">
       <h1 class="visually-hidden">Отзывы</h1>
       <div class="advice">
-        <div class="advice__wrapper--form">
-          <div class="advice__image advice__image--form">
-            <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
-          </div>
-          <b class="advice__slogan">Оставьте свой отзыв</b>
-          <p class="advice__intro advice__intro--form">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также
-            о посещенных вами достопримечательностях
-          </p>
+        <div class="advice__image advice__image--form">
+          <img src="img/sedona-sity.svg" alt="Добро пожаловать в Седону!" width="280" height="39">
+          <div class="advice__triangle"></div>
         </div>
+        <b class="advice__slogan">Оставьте свой отзыв</b>
+        <p class="advice__intro advice__intro--form">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также
+          о посещенных вами достопримечательностях
+        </p>
       </div>
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="get">
         <fieldset class="feedback-form__item feedback-form__item--name">
@@ -149,25 +155,32 @@
     </main>
 
     <footer class="page-footer">
-      <p class="page-footer__hash">#Visitsedona
-      </p>
+      <p class="page-footer__hash">#Visitsedona</p>
       <ul class="page-footer__social social">
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Твиттер</span>
-            <img class="social__link-svg" src="img/icon-twitter.svg" alt="">
+            <svg class="social__link-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="15" fill="#fff">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Фейсбук</span>
-            <img class="social__link-svg" src="img/icon-facebook.svg" alt="">
+            <svg class="social__link-svg social__link-svg--fb" xmlns="http://www.w3.org/2000/svg" width="9" height="19"
+              fill="#fff">
+              <use xlink:href="img/sprite.svg#icon-facebook"></use>
+            </svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Ютуб</span>
-            <img class="social__link-svg" src="img/icon-youtube.svg" alt="">
+            <svg class="social__link-svg social__link-svg--yt" xmlns="http://www.w3.org/2000/svg" width="20" height="14"
+              fill="#fff">
+              <use xlink:href="img/sprite.svg#icon-youtube"></use>
+            </svg>
           </a>
         </li>
       </ul>
@@ -175,7 +188,9 @@
         <span class="copyright__info">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">Ссылка на интенсив</span>
-          <img src="img/htmlacademy.svg" alt="">
+          <svg class="copyright__link-svg" xmlns="http://www.w3.org/2000/svg" width="40" height="50">
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
+          </svg>
         </a>
       </p>
     </footer>
